--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -2,10 +2,6 @@
   transition: border-color 0.2s, background-position 0.2s;
 }
 
-.transition:hover {
-  transition: border-color 0.2s, background-position 0.2s;
-}
-
 .forward {
   background-image: url("/icons/forward.svg");
   background-size: 1.5rem;
@@ -14,15 +10,43 @@
   justify-content: center;
 }
 
-.forward:hover {
-  background-position: right 1rem center;
-}
-
 .active {
   border-color: #166534;
   background-color: #15803d;
 }
 
-.active:hover {
-  border-color: #4ade80;
+@media (hover: hover) {
+  .hover:hover {
+    border-color: rgba(233, 236, 239, 0.25);
+  }
+
+  .forward:hover {
+    background-position: right 1rem center;
+  }
+
+  .transition:hover {
+    transition: border-color 0.2s, background-position 0.2s;
+  }
+
+  .active:hover {
+    border-color: #4ade80;
+  }
+}
+
+@media (hover: none) {
+  .hover:active {
+    border-color: rgba(233, 236, 239, 0.25);
+  }
+
+  .forward:active {
+    background-position: right 1rem center;
+  }
+
+  .transition:active {
+    transition: border-color 0.2s, background-position 0.2s;
+  }
+
+  .active:active {
+    border-color: #4ade80;
+  }
 }
